--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
   justify-content: space-between;
   align-items: center;
   /*проверить корректно ли значение padding*/
-  padding: 92px 50px 96px 50px;
+  padding: 88px 50px;
 }
 
 .header__menu {
@@ -34,7 +34,7 @@ body {
   color: black;
   font-size: 18px;
   /*проверить корректно ли значение line-height*/
-  line-height: 100%;
+  line-height: 1;
 }
 
 .header__link_active {
@@ -52,7 +52,6 @@ body {
 .address {
   display: flex;
   flex-direction: column;
-  /*тут что-то не так, блок съехал*/
   align-items: flex-start;
   max-width: 240px;
   font-size: 18px;
@@ -60,34 +59,43 @@ body {
   line-height: 24px;
 }
 
-.header_address {
+.header__address {
   justify-self: end;
 }
 
-.footer_address {
-  justify-self: start;
-}
-
 .cover {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   min-height: 757px;
+  padding: 165px 50px 0 50px;
+  color: #fff;
   /*уточнить padding*/
-
   background-image: url("../images/cover.jpg");
-  background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 }
 
 .overlay {
-  /*хуй знает как сделать*/
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  opacity: 60%;
+  background-color: black;
 }
 
 .cover__title {
-  width: 100%;
-  color: #fff;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 0;
   font-weight: 700;
   font-size: 100px;
-  line-height: 115%;
-  letter-spacing: 30%;
+  line-height: 1.15;
+  letter-spacing: 0.28em;
   text-transform: uppercase;
 }
 
@@ -108,16 +116,58 @@ body {
 }
 
 .cover__description {
-  padding: 180px 24px 120px 24 px;
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+   font-size: 22px;
+    padding: 50px 0;
+   
+}
+
+.cover__description-text {
+  
+  text-transform: uppercase;
+  word-spacing: 22px;
+ 
+}
+
+.bet-button {
+  border: 1px solid #fff;
+  padding: 12px 30px;
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+  background-color: transparent;
+  transition: background 0.3s, color 0.3s;
+  cursor: pointer;
+}
+
+.bet-button:hover {
+  color: #000;
+  background-color: #fff;
 }
 
 .lots {
+  padding: 180px 24px 120px;
 }
+
 .lots__heading {
+  margin-bottom: 30px;
+  margin-left: 40px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
-  list-style: initial;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .lots__card-list-item {
@@ -126,42 +176,173 @@ body {
 }
 
 .card-link {
+  display: block;
   height: 100%;
+  color: inherit;
+  text-decoration: none;
 }
 
 .card {
+  position: relative;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: space-between;
   height: 100%;
-  background-repeat: no-repeat;
+  border-radius: 5px;
+  padding: 48px 40px;
+  overflow: hidden;
+  color: #fff;
   background-position: center;
   background-size: cover;
 }
 
-.card_type_film {
-}
-
-.card_type_book {
-}
-
-.card_type_picture {
-}
-
 .overlay {
+  position: absolute;
+  z-index: 1;
+  opacity: 60%;
+  background-color: black;
+}
+
+.card__title,
+.card__text {
+  /*color: #fff;*/
+  position: relative;
+  z-index: 2;
 }
 
 .card__title {
+  margin: 0;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.2;
+  text-decoration: underline;
+  text-transform: uppercase;
 }
 
 .card__text {
+  margin: 0;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.card_type_film {
+  background-image: url("../images/card-lot-01.jpg");
+}
+
+.card_type_book {
+  background-image: url("../images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+  background-image: url("../images/card-lot-03.jpg");
 }
 
 .lots__look-more-link {
+  display: inline-block;
+  margin-top: 30px;
+  margin-left: 40px;
+  border-bottom: 1px solid #000;
+  color: #000;
+  font-size: 20px;
+  text-decoration: none;
 }
 
 .about {
+  display: grid;
+  grid-template-columns: 240px 1fr; 
+  gap: 72px;
+  background-color: #fff;
+  padding: 0 24px 180px; 
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 35px 0 0 47px;
+
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  margin: 0 auto;
+
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.about__logo-image {
+  max-width: 70%;
+  max-height: 70%;
+}
+
+.about__title {
+  margin-top: 98px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+  
+}
+
+.about__text {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 24px; /* гибкий отступ между параграфами */
+  line-height: 1.5;
 }
 
 .footer {
-  padding: 0 24px 180px 24 px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: start;
+  padding: 0px 50px 84px; 
+}
+
+.footer__address {
+  justify-self: start;
+}
+
+.footer__menu {
+  text-align: center;
+}
+
+.footer__menu-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__menu-list-item {
+ }
+
+.footer__menu-link {
+  color: inherit;
+  text-decoration: underline;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: flex-end;
+  gap: 48px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.footer__social-link {
+  display: inline-block;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
 }
