--- a/styles/style.css
+++ b/styles/style.css
@@ -1,52 +1,51 @@
+img {
+  display: block;
+  height: auto;
+}
+
 body {
   font-weight: 400;
   background-color: #fff;
 }
 
+/* -HEADER- */
+
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
-  justify-content: space-between;
   align-items: center;
-  /*проверить корректно ли значение padding*/
-  padding: 88px 50px;
-}
-
-.header__menu {
+  padding: 88px 50px 92px;
 }
 
 .header__links-list {
   display: flex;
-  flex-direction: row;
-  /*проверить корректно ли значение gap*/
-  gap: 33px;
-  list-style: circle;
+  gap: 32px;
+  margin: 0;
+  padding: 0;
 }
 
 .header__links-list-item {
+  list-style: circle;
 }
-
 .header__links-list-item_no-bullit {
   list-style: none;
 }
 
 .header__link {
+  border-bottom: 1px solid #000;
   color: black;
   font-size: 18px;
-  /*проверить корректно ли значение line-height*/
-  line-height: 1;
+  line-height: 21px;
+  text-decoration: none;
 }
 
 .header__link_active {
-  text-decoration: none;
+  border-bottom: none;
 }
 
 .header__logo {
   display: block;
-  width: 148px;
-}
-
-.header__logo-image {
+  width: 146px;
 }
 
 .address {
@@ -63,15 +62,17 @@ body {
   justify-self: end;
 }
 
+/* -COVER- */
+
 .cover {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-height: 757px;
+  margin: 0;
   padding: 165px 50px 0 50px;
   color: #fff;
-  /*уточнить padding*/
   background-image: url("../images/cover.jpg");
   background-position: center;
   background-size: cover;
@@ -81,7 +82,7 @@ body {
   position: absolute;
   inset: 0;
   z-index: 1;
-  opacity: 60%;
+  opacity: 0.6;
   background-color: black;
 }
 
@@ -91,10 +92,10 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin: 0;
+  margin-right: -25px;
   font-weight: 700;
   font-size: 100px;
-  line-height: 1.15;
+  line-height: 115px;
   letter-spacing: 0.28em;
   text-transform: uppercase;
 }
@@ -121,16 +122,14 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-   font-size: 22px;
-    padding: 50px 0;
-   
+  padding: 50px 0;
+  font-size: 22px;
+  line-height: 26px;
 }
 
 .cover__description-text {
-  
   text-transform: uppercase;
-  word-spacing: 22px;
- 
+  word-spacing: 18px;
 }
 
 .bet-button {
@@ -138,6 +137,7 @@ body {
   padding: 12px 30px;
   color: #fff;
   font-size: 22px;
+  line-height: 26px;
   text-transform: uppercase;
   background-color: transparent;
   transition: background 0.3s, color 0.3s;
@@ -149,8 +149,10 @@ body {
   background-color: #fff;
 }
 
+/* -LOTS- */
+
 .lots {
-  padding: 180px 24px 120px;
+  padding: 180px 24px 0px;
 }
 
 .lots__heading {
@@ -158,6 +160,7 @@ body {
   margin-left: 40px;
   font-weight: 700;
   font-size: 40px;
+  line-height: 46px;
   text-transform: uppercase;
 }
 
@@ -188,7 +191,6 @@ body {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  border-radius: 5px;
   padding: 48px 40px;
   overflow: hidden;
   color: #fff;
@@ -196,16 +198,8 @@ body {
   background-size: cover;
 }
 
-.overlay {
-  position: absolute;
-  z-index: 1;
-  opacity: 60%;
-  background-color: black;
-}
-
 .card__title,
 .card__text {
-  /*color: #fff;*/
   position: relative;
   z-index: 2;
 }
@@ -214,7 +208,7 @@ body {
   margin: 0;
   font-weight: 700;
   font-size: 22px;
-  line-height: 1.2;
+  line-height: 26px;
   text-decoration: underline;
   text-transform: uppercase;
 }
@@ -222,7 +216,7 @@ body {
 .card__text {
   margin: 0;
   font-size: 20px;
-  line-height: 1.2;
+  line-height: 24px;
 }
 
 .card_type_film {
@@ -244,23 +238,23 @@ body {
   border-bottom: 1px solid #000;
   color: #000;
   font-size: 20px;
+  line-height: 23px;
   text-decoration: none;
 }
 
+/* -ABOUT- */
+
 .about {
   display: grid;
-  grid-template-columns: 240px 1fr; 
+  grid-template-columns: 240px 1fr;
   gap: 72px;
+  padding: 120px 24px 181px;
   background-color: #fff;
-  padding: 0 24px 180px; 
 }
 
 .about__column {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  padding: 35px 0 0 47px;
-
 }
 
 .about__logo {
@@ -269,38 +263,42 @@ body {
   align-items: center;
   width: 240px;
   height: 240px;
-  margin: 0 auto;
-
+  margin: 35px 47px;
   border-radius: 50%;
   background-color: #000;
 }
 
 .about__logo-image {
-  max-width: 70%;
-  max-height: 70%;
+  display: block;
+  width: 148px;
 }
 
 .about__title {
-  margin-top: 98px;
+  margin: 134px 46px 99px;
   font-weight: 700;
   font-size: 40px;
+  line-height: 48px;
   text-transform: uppercase;
-  
 }
 
 .about__text {
-  margin-top: 100px;
   display: flex;
   flex-direction: column;
-  gap: 24px; /* гибкий отступ между параграфами */
-  line-height: 1.5;
+  gap: 24px;
+  margin-left: 46px;
+  font-size: 20px;
+  line-height: 1.2;
+  overflow-wrap: break-word;
+  max-width: 693px;
 }
+
+/* -FOOTER- */
 
 .footer {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: start;
-  padding: 0px 50px 84px; 
+  padding: 0px 50px 84px;
 }
 
 .footer__address {
@@ -317,16 +315,16 @@ body {
   list-style: none;
 }
 
-.footer__menu-list-item {
- }
-
 .footer__menu-link {
+  border-bottom: 1px solid #000;
   color: inherit;
-  text-decoration: underline;
+  font-size: 18px;
+  line-height: 21px;
+  text-decoration: none;
 }
 
 .footer__menu-link_active {
-  text-decoration: none;
+  border-bottom: none;
 }
 
 .footer__social-list {
