--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: center;
-  padding: 88px 50px 92px;
+  padding: 91px 50px 95px;
 }
 
 .header__links-list {
@@ -32,20 +32,19 @@ body {
 }
 
 .header__link {
-  border-bottom: 1px solid #000;
   color: black;
   font-size: 18px;
   line-height: 21px;
-  text-decoration: none;
+  text-underline-position: under;
 }
 
 .header__link_active {
-  border-bottom: none;
+  text-decoration: none;
 }
 
 .header__logo {
   display: block;
-  width: 146px;
+  width: 138px;
 }
 
 .address {
@@ -56,6 +55,7 @@ body {
   font-size: 18px;
   font-style: normal;
   line-height: 24px;
+  text-underline-position: under;
 }
 
 .header__address {
@@ -71,7 +71,7 @@ body {
   justify-content: space-between;
   min-height: 757px;
   margin: 0;
-  padding: 165px 50px 0 50px;
+  padding: 160px 50px 0 50px;
   color: #fff;
   background-image: url("../images/cover.jpg");
   background-position: center;
@@ -91,12 +91,12 @@ body {
   z-index: 2;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-right: -25px;
+  gap: 18px;
+  margin-right: -20px;
   font-weight: 700;
   font-size: 100px;
-  line-height: 115px;
-  letter-spacing: 0.28em;
+  line-height: 120px;
+  letter-spacing: 0.273em;
   text-transform: uppercase;
 }
 
@@ -129,12 +129,12 @@ body {
 
 .cover__description-text {
   text-transform: uppercase;
-  word-spacing: 18px;
+  word-spacing: 19px;
 }
 
 .bet-button {
   border: 1px solid #fff;
-  padding: 12px 30px;
+  padding: 12px 31px;
   color: #fff;
   font-size: 22px;
   line-height: 26px;
@@ -214,7 +214,7 @@ body {
 }
 
 .card__text {
-  margin: 0;
+  margin-top: 0;
   font-size: 20px;
   line-height: 24px;
 }
@@ -235,20 +235,19 @@ body {
   display: inline-block;
   margin-top: 30px;
   margin-left: 40px;
-  border-bottom: 1px solid #000;
   color: #000;
   font-size: 20px;
   line-height: 23px;
-  text-decoration: none;
+  text-underline-position: under;
 }
 
 /* -ABOUT- */
 
 .about {
   display: grid;
-  grid-template-columns: 240px 1fr;
-  gap: 72px;
-  padding: 120px 24px 181px;
+  grid-template-columns: 334px 1fr;
+  gap: 26px;
+  padding: 121px 24px 181px;
   background-color: #fff;
 }
 
@@ -274,7 +273,7 @@ body {
 }
 
 .about__title {
-  margin: 134px 46px 99px;
+  margin-top: 135px;
   font-weight: 700;
   font-size: 40px;
   line-height: 48px;
@@ -285,24 +284,30 @@ body {
   display: flex;
   flex-direction: column;
   gap: 24px;
-  margin-left: 46px;
+  max-width: 693px;
+  margin-top: 98px;
+  overflow-wrap: break-word;
   font-size: 20px;
   line-height: 1.2;
-  overflow-wrap: break-word;
-  max-width: 693px;
+}
+
+.about__text .about__text-first-paragraph {
+  max-width: 688px;
 }
 
 /* -FOOTER- */
 
 .footer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr auto 1fr;
   align-items: start;
   padding: 0px 50px 84px;
 }
 
 .footer__address {
   justify-self: start;
+  max-width: 250px;
+  line-height: 24px;
 }
 
 .footer__menu {
@@ -316,15 +321,14 @@ body {
 }
 
 .footer__menu-link {
-  border-bottom: 1px solid #000;
   color: inherit;
   font-size: 18px;
   line-height: 21px;
-  text-decoration: none;
+  text-underline-position: under;
 }
 
 .footer__menu-link_active {
-  border-bottom: none;
+  text-decoration: none;
 }
 
 .footer__social-list {
