--- a/styles/style.css
+++ b/styles/style.css
@@ -133,9 +133,9 @@ body {
 }
 
 .bet-button {
-  border: 1px solid #fff;
+  border: 1px solid;
   padding: 12px 31px;
-  color: #fff;
+  color: currentColor;
   font-size: 22px;
   line-height: 26px;
   text-transform: uppercase;
@@ -192,7 +192,6 @@ body {
   justify-content: space-between;
   height: 100%;
   padding: 48px 40px;
-  overflow: hidden;
   color: #fff;
   background-position: center;
   background-size: cover;
@@ -291,7 +290,7 @@ body {
   line-height: 1.2;
 }
 
-.about__text .about__text-first-paragraph {
+.about__text p:first-child {
   max-width: 688px;
 }
 
